# vibecast

./: .gitignore  Future Enhancements.md  PRD.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  dining.py  music.py  shopping.py  weather.py
app/core/: config.py
app/models/: schemas.py
app/services/: dining.py  music.py  shopping.py  weather.py
app/static/: index.html  script.js
